# cove

./: .gitignore  1  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
Cove/: CoveApp.swift  Info.plist
Cove.xcodeproj/: project.pbxproj
Cove/Agents/: ExecutableResolver.swift  QueryAgentContextBuilder.swift  QueryAgentPromptBuilder.swift  QueryAgentSession.swift  QueryAgentTypes.swift
Cove/DB/: BackendServerInfo.swift  CompletionEngine.swift  CompletionTypes.swift  ConnectionConfig.swift  DatabaseBackend.swift  QueryResult.swift  README.md
Cove/State/: AppState.swift  DialogState.swift  QueryState.swift  TableState.swift
Cove/Store/: ConnectionStore.swift  KeychainHelper.swift  QueryStore.swift  SavedConnection.swift  SessionStore.swift  SharedStore.swift
Cove/Theme/: CoveTheme.swift
Cove/Views/: AgentComposerView.swift  AgentPromptTextView.swift  CompletionPopup.swift  ConnectionDialog.swift  ConnectionRail.swift  ContentView.swift  DataTableView.swift  QueryEditorView.swift  RowInspectorView.swift  SQLEditorAgentOverlay.swift  SQLEditorRangeGeometry.swift  SQLEditorSupportViews.swift  SQLEditorView.swift  SQLHighlighter.swift  SidebarView.swift  TabRootView.swift
CoveTests/: QueryAgentPromptBuilderTests.swift  QueryStateTests.swift  TableStateTests.swift
Morfeo.xcodeproj/: project.pbxproj
Morfeo/DB/: ConnectionConfig.swift  SSHTunnel.swift
Morfeo/State/: AppState.swift  (+1 more)
src/: app.rs  main.rs  store.rs
(+59 files in other folders)
