[package]
name = "morfeo"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono", "uuid", "json"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
